--- a/index.css
+++ b/index.css
@@ -45,3 +45,11 @@ input, textarea {
 #anki_csv, #input {
   margin-top: 1.1rem;
 }
+
+#resultdisplay_main > div > span.red {
+  color: red;
+}
+
+#resultdisplay_main > div > span.orange {
+  color: orange;
+}
